# rust-map-reduce

./: Cargo.toml  README.md  input.txt
src/: main.rs
