[package]
name = "rust-map-reduce"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/rust-map-reduce"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
